--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "koa": "^2.13.4",
     "koa-body": "^4.2.0",
     "koa-router": "^10.1.1",
+    "koa-static": "^5.0.0",
     "koa2-cors": "^2.0.6",
     "nodemon": "^2.0.15"
   }
